Fix CSS left alignment of real time notification

--- a/Files/src/css/component/main-window.component.scss
+++ b/Files/src/css/component/main-window.component.scss
@@ -122,7 +122,7 @@ body {
 				display: flex;
 			    justify-content: flex-start;
 			    align-items: center;
-			    padding-left: 15px;
+			    padding-left: 10px;
 		    }
 
 		    .controls {
